node-http-server-k8s/service-node-http-server-1.yml
apiVersion: v1
kind: Service
metadata:
  name: service-http-server-1
spec:
  type: NodePort
  selector:
    app: http-server-1
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 3000
