node-http-server-k8s/service-node-http-server-2.yml
apiVersion: v1
kind: Service
metadata:
  name: service-http-server-2
spec:
  type: NodePort
  selector:
    app: http-server-2
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 3001
